tests/miniJava/neg/001435_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int [ int [] java ; 0 ] ; } }
